<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopicsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:gravity="center"
            android:text="@string/articles_topics"
            android:textColor="@color/colorPrimary"
            android:background="@color/lightgray"
            android:textSize="25sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imgEducation"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/education1" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:text="@string/education"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgHistory"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/history1"
            tools:ignore="DuplicateIds" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:text="@string/History"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgHealth"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/health1"
            tools:ignore="DuplicateIds" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:text="Health"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgTechnology"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/technology1"
            tools:ignore="DuplicateIds" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:text="Technology"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgCareer"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/careerdevelopment1"
            tools:ignore="DuplicateIds" />

        <TextView
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:text="@string/career_development"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgPsychology"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/psychology1"
            tools:ignore="DuplicateIds" />


        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:text="@string/psychology"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgGeneral"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/general1"
            tools:ignore="DuplicateIds" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:text="@string/general"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>